force-app/main/default/objects/Exam_Assigned__c/Exam_Assigned__c.object-meta.xml
<CustomObject>
    <description>List of the Exams assigned to an IDC</description>
    <label>Exam Assigned</label>
    <nameField>
        <displayFormat>EAID-{0000000}</displayFormat>
        <label>Assigned Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exams Assigned</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>