force-app/main/default/objects/Exam_Assigned__c/fields/Assigned_Course__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which course is the exam tied to?</description>
    <label>Assigned Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Exams Assigned</relationshipLabel>
    <relationshipName>Exams_Assigned</relationshipName>
    <type>Lookup</type>
</CustomField>