force-app/main/default/objects/Exam_Assigned__c/fields/Current_IDC__c.field-meta.xml
<CustomField>
    <fullName>Current_IDC__c</fullName>
    <formula>Assigned_Course__r.Current_IDC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current IDC?</label>
    <type>Checkbox</type>
</CustomField>