force-app/main/default/objects/Exam_Assigned__c/fields/Date_Available__c.field-meta.xml
<CustomField>
    <fullName>Date_Available__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>When the exam becomes available to the candiadte</description>
    <inlineHelpText>When the exam becomes available to the candiadte</inlineHelpText>
    <label>Date Available</label>
    <type>Date</type>
</CustomField>