force-app/main/default/objects/Exam_Assigned__c/fields/Exam__c.field-meta.xml
<CustomField>
    <fullName>Exam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exam</label>
    <referenceTo>Exam__c</referenceTo>
    <relationshipLabel>Exams Assigned</relationshipLabel>
    <relationshipName>Exams_Assigned</relationshipName>
    <type>Lookup</type>
</CustomField>