force-app/main/default/objects/Exam_Assigned__c/fields/Exam_Active__c.field-meta.xml
<CustomField>
    <fullName>Exam_Active__c</fullName>
    <formula>Exam__r.Available__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exam Active</label>
    <type>Checkbox</type>
</CustomField>