force-app/main/default/objects/Exam_Assigned__c/fields/Exam_Name__c.field-meta.xml
<CustomField>
    <fullName>Exam_Name__c</fullName>
    <description>Used for Lightning Flow selection</description>
    <formula>Exam__r.Name &amp; &quot;   -   Type: &quot; &amp; TEXT(Exam__r.Type__c) &amp; &quot; Exam   - &quot; &amp;  TEXT(Exam__r.Number_of_Questions__c) &amp; &quot; Questions &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exam Name</label>
    <type>Text</type>
</CustomField>