force-app/main/default/objects/Exam_Assigned__c/fields/IDC__c.field-meta.xml
<CustomField>
    <fullName>IDC__c</fullName>
    <formula>Assigned_Course__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IDC</label>
    <type>Text</type>
</CustomField>